builds out sidebar dropdowns

--- a/src/components/SideMenu.module.css
+++ b/src/components/SideMenu.module.css
@@ -2,30 +2,29 @@
   position: fixed;
   right: 0;
   top: 0;
-  width: 55%;
+  width: 50%;
   margin: 3rem 0;
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
 }
 
-
 .sideMenu.open {
-  transform: translateX(10%);
+  transform: translateX(0%);
 }
 
 .customList {
+  font-size: 0.8rem;
   list-style-type: none;
   padding-left: 0;
   font-weight: bolder;
 }
 
-.customList li {
-  margin-bottom: 0.5rem;
-}
-
-.customList li::before {
-  content: "+";
-  margin-right: 0.5rem;
+.customList li,
+.customList button {
+  font-size: 0.8rem;
+  list-style-type: none;
+  font-weight: bolder;
+  margin-bottom: 0.3rem;
 }
 
 .donateButt {
@@ -35,4 +34,16 @@
   font-size: 1.1rem;
   font-weight: 300;
   margin-top: 1rem;
+}
+
+.noStyleLi {
+  text-decoration: none;
+  list-style-type: none;
+  color: inherit;
+  margin-left: -1rem;
+}
+
+.noStyleLink {
+  text-decoration: none;
+  color: inherit;
 }
