--- a/src/components/Carousel.module.css
+++ b/src/components/Carousel.module.css
@@ -6,7 +6,7 @@
   height: 90vh;
   background: #151515 url("../assets/asb1.jpeg") no-repeat center center;
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment:scroll;
 }
 
 .matte {
