--- a/src/components/News.module.css
+++ b/src/components/News.module.css
@@ -3,3 +3,11 @@
   color: rgb(80, 80, 238);
   margin: auto;
 }
+
+.newsHead {
+  font-weight: 400;
+  color: rgb(80, 80, 238);
+  margin: auto;
+  text-align: center;
+  margin-bottom: 1rem;
+}
