--- a/src/components/News.module.css
+++ b/src/components/News.module.css
@@ -1,13 +1,10 @@
 .newsh4 {
   font-weight: 400;
   color: rgb(80, 80, 238);
-  margin: auto;
 }
 
 .newsHead {
   font-weight: 400;
   color: rgb(80, 80, 238);
-  margin: auto;
-  text-align: center;
-  margin-bottom: 1rem;
+  text-align: left;
 }
