--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -2,7 +2,7 @@
 $font-family-sans-serif: "Montserrat", sans-serif;
 
 // Colors
-$primary: #f8b547;
+$primary: #4773f8;
 $secondary: rgb(255, 146, 164);
 $light: #fbf9f5;
 $body-bg: $light;
