--- a/src/components/News.module.css
+++ b/src/components/News.module.css
@@ -8,3 +8,25 @@
   color: rgb(80, 80, 238);
   text-align: left;
 }
+
+.imageWrapper {
+  position: relative;
+}
+
+.overlayText {
+  position: absolute;
+  top: 15%;
+  left: 90%;
+  transform: translate(-50%, -50%);
+  color: black;
+  background-color: white;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 800;
+  padding: 0.2rem .2rem;
+  line-height: .9;
+}
+
+.overlayText span {
+  font-size: 2.2rem;
+}
