--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,4 +31,16 @@ body {
   font-size: 1.1rem;
   font-weight: 200;
   margin-top: 1rem;
+  border-radius: .3rem;
+}
+
+.orangeButt {
+  background-color: #f47536;
+  color: white;
+  padding: 0.3rem 1rem;
+  font-size: 1.1rem;
+  font-weight: 200;
+  margin-top: 1rem;
+  z-index: 2;
+  border-radius: .3rem;
 }
