stylizes deskotp nav bar

--- a/src/components/MobileNavBar.module.css
+++ b/src/components/MobileNavBar.module.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: pink;
+  background-color: var(--bs-light);
   display: flex;
   justify-content: space-between;
   padding: 1rem 2rem;
