--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -6,6 +6,7 @@ $primary: #4773f8;
 $secondary: rgb(255, 146, 164);
 $light: #fbf9f5;
 $body-bg: $light;
+$jones: #fe9204;
 
 // Spacing
 $spacer: 1rem !default;
