--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
-  background-color: #f5f5f5;
+  background-color: var(--bs-light);
   color: #333;
   font-size: 16px;
   line-height: 1.5;
