--- a/src/components/DesktopNavBar.module.css
+++ b/src/components/DesktopNavBar.module.css
@@ -7,18 +7,21 @@
   border-radius: 0.3rem;
 }
 
+.menu {
+  align-self: center;
+}
+
 .dropHead {
   position: relative;
   font-weight: bolder;
   margin: 0 1.5rem;
-  padding-bottom:.5rem;
 }
 
 .dropdown {
   position: absolute;
   top: 95%; /* Start just below the button */
   left: 0;
-  width: 18rem;
+  width: 17rem;
   background-color: var(--bs-light);
   border-radius: 0.3rem;
   padding-top: 1rem;
